Create component done, without image upload and styling